# trip-assistant

./: .env.example  .gitignore  Caddyfile  Claude.md  Dockerfile  TRIP_PLANNER.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.claude/skills/plan/: SKILL.md
.github/workflows/: ci.yml
agents/backend/tasks/: todo.md
docs/: architecture.md  threat-model.md
docs/adr/: ADR-001-python-monorepo.md  ADR-002-celery-vs-bullmq.md  ADR-003-stripe-primary-payment.md  ADR-004-no-llm-in-mvp.md
examples/: calendar-assistant-plan.md  planning-flow-example.md  trip-planner.md
infra/: README.md  gcp-vm-setup.sh
src/api/: deps.py  main.py  schemas.py
src/api/routers/: payments.py  trips.py
src/bot/: main.py
src/bot/handlers/: briefing.py  delivery.py
src/db/: base.py  models.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_initial.py
src/lib/: config.py
src/worker/: celery_app.py  doc_generator.py  rules_engine.py  storage.py  tasks.py  trip_composer.py
src/worker/providers/: __init__.py  base.py  google_places.py  stub.py
tasks/: todo.md
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_auth.py  test_generation_api.py  test_payments_api.py  test_trips_api.py
tests/unit/: conftest.py  test_doc_generator.py  test_providers.py  test_rules_engine.py  test_trip_composer.py
